# autodoc

./: .dockerignore  .gitignore  AUTODOC.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  LAUNCH_PLAN.md  Makefile  README.md  ROADMAP.md  autodoc_cache.json.backup  cloudrun.yaml  code_graph.html  comprehensive_data.json  comprehensive_docs.md  create_autodoc.sh  demo.enrichment.md  docker-compose.yml  entity_network.html  file_dependencies.html  pyproject.toml
.autodoc/: features_cache.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude.yml  npm-publish.yml
dashboard/: .env.example  README.md  package-lock.json  package.json
docs/: index.html  style.css
examples/fastapi-demo/: README.md  demo.sh
infrastructure/api/: .env.example  .gcloudignore  Dockerfile  cloudbuild-local.yaml  cloudbuild.yaml  deploy.sh  main.py  requirements.txt  run_local.sh  test_main.py
infrastructure/supabase/: schema.sql
rust-core/: README.md  build.py
rust-core/src/: analyzer.rs  entity.rs  lib.rs  parser.rs
scripts/: deploy-mcp.sh  rust_performance_demo.py
sdk/nodejs/: README.md  package-lock.json  package.json
site/: index.html
src/autodoc/: __init__.py  __main__.py  analyzer.enrichment.md  analyzer.py  api_server.enrichment.md  api_server.py  autodoc.py  (+33 more)
tests/: test_autodoc.py  test_autodoc_legacy.py.bak  test_chromadb.py  test_features.py  test_graph.py  test_inline_enrichment.py  test_ot_engine.py  test_rust_core.py  test_skill_generator.py  test_typescript_support.py
(+41 files in other folders)
