[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodoc"
dynamic = ["version"]
description = "AI-powered code intelligence for our projects"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "aiohttp>=3.9.1",
    "aiohttp-cors>=0.7.0",
    "asyncpg>=0.29.0",
    "numpy<2.0",
    "astroid>=3.0.2",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "openai>=1.6.1",
    "tiktoken>=0.5.2",
    "PyGithub>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.1",
    "ruff>=0.1.8",
]

[project.scripts]
autodoc = "autodoc.cli:main"

[tool.hatch.version]
path = "src/autodoc/__about__.py"

[tool.hatch]
installer = "uv"

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.1",
    "ruff>=0.1.8",
    "ipython>=8.18.0",
]

[tool.hatch.envs.default.scripts]
serve = "python -m autodoc serve"
analyze = "python -m autodoc analyze {args}"
search = "python -m autodoc search {args}"
summary = "python -m autodoc generate_summary"
test = "pytest {args:tests}"
fmt = ["black .", "ruff check . --fix"]
check = "python -m autodoc check"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]
